--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1 align="justify"> l'apéro de Jeanne </small></h1>
+						
 						<nav class="links">
 							<ul>
 								<li><a href="index.html">Accueil</a></li>
@@ -127,8 +128,9 @@
 						<!-- Intro -->
 							<section id="intro" align="center">
 								<img src="images/logo.png" width = "400" height ="400" />
-								<header>
-								</header>
+									<header>
+										<h3> Pas de gaspillage <br> Que du partage</h3>
+									</header>
 							</section>
 
 						<!-- Mini Posts
